force-app/main/default/objects/Location_Showing__c/Location_Showing__c.object-meta.xml
<CustomObject>
    <label>Location-Showing</label>
    <nameField>
        <label>Location-Showing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location-Showings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>