force-app/main/default/objects/Location_Showing__c/fields/City_Secondary__c.field-meta.xml
<CustomField>
    <fullName>City_Secondary__c</fullName>
    <label>City (Secondary)</label>
    <type>TextArea</type>
</CustomField>