force-app/main/default/objects/Location_Showing__c/fields/CityName__c.field-meta.xml
<CustomField>
    <fullName>CityName__c</fullName>
    <label>CityName</label>
    <type>TextArea</type>
</CustomField>