force-app/main/default/objects/Location_Showing__c/fields/Community_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Community_Secondary__c</fullName>
    <label>Community (Secondary)</label>
    <type>TextArea</type>
</CustomField>