force-app/main/default/objects/Location_Showing__c/fields/CommunityName__c.field-meta.xml
<CustomField>
    <fullName>CommunityName__c</fullName>
    <label>CommunityName</label>
    <type>TextArea</type>
</CustomField>