force-app/main/default/objects/Location_Showing__c/fields/Property_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Property_Secondary__c</fullName>
    <label>Property (Secondary)</label>
    <type>TextArea</type>
</CustomField>