force-app/main/default/objects/Location_Showing__c/fields/PropertyName__c.field-meta.xml
<CustomField>
    <fullName>PropertyName__c</fullName>
    <label>PropertyName</label>
    <type>TextArea</type>
</CustomField>