force-app/main/default/objects/Location_Showing__c/fields/SearchPropertiesFormula__c.field-meta.xml
<CustomField>
    <fullName>SearchPropertiesFormula__c</fullName>
    <formula>IF(
ISBLANK(CityName__c) &amp;&amp; ISBLANK(CommunityName__c) &amp;&amp; ISBLANK(SubcommunityName__c) &amp;&amp; ISBLANK(PropertyName__c),
NULL,
IF(
ISBLANK(CityName__c),
&quot;&quot;,
CityName__c &amp; IF(ISBLANK(CommunityName__c), &quot;&quot;, &quot; - &quot;)
) &amp;
IF(
ISBLANK(CommunityName__c),
&quot;&quot;,
CommunityName__c &amp; IF(ISBLANK(SubcommunityName__c), &quot;&quot;, &quot; - &quot;)
) &amp;
IF(
ISBLANK(SubcommunityName__c),
&quot;&quot;,
SubcommunityName__c &amp; IF(ISBLANK(PropertyName__c), &quot;&quot;, &quot; - &quot;)
) &amp;
IF(
ISBLANK(PropertyName__c),
&quot;&quot;,
PropertyName__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SearchPropertiesFormula</label>
    <type>Text</type>
</CustomField>