force-app/main/default/objects/Location_Showing__c/fields/Subcommunity_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Subcommunity_Secondary__c</fullName>
    <label>Subcommunity (Secondary)</label>
    <type>TextArea</type>
</CustomField>