force-app/main/default/objects/Location_Showing__c/fields/SubcommunityName__c.field-meta.xml
<CustomField>
    <fullName>SubcommunityName__c</fullName>
    <label>SubcommunityName</label>
    <type>TextArea</type>
</CustomField>